# backend/src/main/java/com/example/backend/rest/UserRest.java
@@ -225,7 +225,7 @@ public class UserRest {
             savedUser = userService.registerNewAuthUser(user);
         }
 
-        userService.sendEmailVerification(savedUser);
+        userService.sendEmailVerification(savedUser.getEmail());
 
         return new ResponseEntity<>(HttpStatus.CREATED);
     }
@@ -247,5 +247,16 @@ public class UserRest {
         userService.updateLastOnline(user);
 
         return new ResponseEntity<>(new ApiKeyDto(token), HttpStatus.CREATED);
+    }
+
+    @PostMapping("/register/resend-email")
+    public ResponseEntity<Object> resendEmail(@RequestBody Map<String, String> input) throws MessagingException {
+        String email = input.get("email");
+
+        if (userService.getUserByEmail(email) == null || userService.getUserByEmail(email).getVerified()) return new ResponseEntity<>(new ErrorDto("email does not exist"), HttpStatus.BAD_REQUEST);
+
+        userService.sendEmailVerification(email);
+
+        return ResponseEntity.ok().build();
     }
 }
